--- a/kyberkucharka-backend/package.json
+++ b/kyberkucharka-backend/package.json
@@ -12,6 +12,8 @@
   "author": "cxivo",
   "license": "ISC",
   "dependencies": {
+    "@types/cors": "^2.8.17",
+    "cors": "^2.8.5",
     "dotenv": "^16.4.7",
     "express": "^4.21.2"
   },
