--- a/kyberkucharka-backend/package.json
+++ b/kyberkucharka-backend/package.json
@@ -13,9 +13,11 @@
   "license": "ISC",
   "dependencies": {
     "@types/cors": "^2.8.17",
+    "bcryptjs": "^3.0.2",
     "cors": "^2.8.5",
     "dotenv": "^16.4.7",
     "express": "^4.21.2",
+    "express-jwt": "^8.5.1",
     "pg-promise": "^11.13.0"
   },
   "devDependencies": {
