--- a/kyberkucharka-backend/package.json
+++ b/kyberkucharka-backend/package.json
@@ -13,11 +13,12 @@
   "license": "ISC",
   "dependencies": {
     "@types/cors": "^2.8.17",
+    "@types/jsonwebtoken": "^9.0.9",
     "bcryptjs": "^3.0.2",
     "cors": "^2.8.5",
     "dotenv": "^16.4.7",
     "express": "^4.21.2",
-    "express-jwt": "^8.5.1",
+    "jsonwebtoken": "^9.0.2",
     "pg-promise": "^11.13.0"
   },
   "devDependencies": {
