--- a/kyberkucharka-backend/package.json
+++ b/kyberkucharka-backend/package.json
@@ -4,7 +4,7 @@
   "description": "backend for the greatest cookbook in my epsilon area",
   "main": "dist/index.js",
   "scripts": {
-    "build": "npx tsc",
+    "build": "npx tsc --build tsconfig.json",
     "start": "node dist/index.js",
     "dev": "nodemon src/index.ts",
     "test": "echo \"Error: no test specified\" && exit 1"
