modify frontend build script

--- a/kyberkucharka-frontend/tsconfig.json
+++ b/kyberkucharka-frontend/tsconfig.json
@@ -4,5 +4,11 @@
     { "path": "./tsconfig.app.json" },
     { "path": "./tsconfig.node.json" },
     { "path": "../common-interfaces" }
-  ]
+  ],
+  "compilerOptions": {
+    "moduleResolution": "node",
+    "resolveJsonModule": true,
+    "esModuleInterop": true,
+    "skipLibCheck": true
+  }
 }
