--- a/kyberkucharka-frontend/package.json
+++ b/kyberkucharka-frontend/package.json
@@ -17,6 +17,7 @@
     "react-dom": "^19.0.0",
     "react-router-dom": "^7.3.0",
     "react-select": "^5.10.1",
+    "react-tooltip": "^5.28.1",
     "use-debounce": "^10.0.4"
   },
   "devDependencies": {
